--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,47 @@
-.navbar{
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,200&display=swap');
+
+
+
+body{
+    font-family: 'Montserrat', sans-serif;
     background-color: black;
-    
+    color: white;
+}
+.navbar {
+  background-color: black;
 }
 
-.logo{
-    color:red;
+.logo {
+  color: red;
 }
 
-.heading{
-    text-align: center;;
+.heading {
+  text-align: center;
+}
+
+
+
+.music {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 0.5px solid white;
+  box-shadow: 1px 2px white;
+  border-radius: 8px;
+  margin: 1rem 0.2rem;
+}
+
+.music-video {
+  padding: 1rem;
+  object-fit: cover;
+}
+
+.music-text{
+    color: grey;
+    font-weight: 600;
+}
+
+
+.footer{
+    background-color: #141414
 }
