--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,3 +1,16 @@
+<footer class="footer page-footer">
+    <div class="container">
+ 
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      <p class="center-align">©kahealbeats</p> 
+      </div>
+    </div>
+  </footer>
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -9,6 +22,7 @@
 var elems = document.querySelectorAll('.slider');
 var instances = M.Slider.init(elems);
 });
+
 
 </script>
 </body>
